--- a/infra/resources.yml
+++ b/infra/resources.yml
@@ -1,12 +1,31 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: "All things infrastructure for my blog"
+Description: All things infrastructure for my blog
 
 Resources:
 
   StagingBucket:
-    Type: "AWS::S3::Bucket"
+    Type: AWS::S3::Bucket
     Properties:
-      BucketName: "says-quietly.jakegillespie.me"
+      BucketName: says-quietly.jakegillespie.me
       Tags:
       - Key: project
         Value: dot-blog
+
+  StagingSite:
+    Type: AWS::CloudFront::Distribution
+    Properties:
+      DistributionConfig:
+        DefaultCacheBehavior:
+          ForwardedValues:
+            QueryString: false
+          TargetOriginId: S3-says-quietly.jakegillespie.me
+          ViewerProtocolPolicy: allow-all
+        DefaultRootObject: index.html
+        Enabled: true
+        HttpVersion: "http2"
+        Origins:
+        - DomainName: says-quietly.jakegillespie.me.s3.amazonaws.com
+          Id: S3-says-quietly.jakegillespie.me
+          S3OriginConfig:
+            OriginAccessIdentity: ""
+        PriceClass: PriceClass_100
