--- a/infra/resources.yml
+++ b/infra/resources.yml
@@ -15,6 +15,8 @@ Resources:
     Type: AWS::CloudFront::Distribution
     Properties:
       DistributionConfig:
+        Aliases:
+        - says-quietly.jakegillespie.me
         DefaultCacheBehavior:
           ForwardedValues:
             QueryString: false
