--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy:staging": "aws --profile jakegillespie.me s3 sync build/ s3://says-quietly.jakegillespie.me",
+    "deploy:production": "aws --profile jakegillespie.me s3 sync build/ s3://says.jakegillespie.me",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
